<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_gravity="center"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="32sp"
            android:textColor="@android:color/holo_red_dark"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/questions_text_view"
            android:layout_marginBottom="20dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/op1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op1" />
            <RadioButton
                android:id="@+id/op2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op2" />
            <RadioButton
                android:id="@+id/op3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op3" />
            <RadioButton
                android:id="@+id/op4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op4" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_gravity="start"
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous" />
            <Button
                android:layout_gravity="end"
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>