<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamsList">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            >
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autoText="true"
                android:padding="10dp"
                android:text="@string/subject"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView6"
                android:autoText="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exam_time"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/textView5"
                android:autoText="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/full_marks"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/textView4"
                android:autoText="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exam_type"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/textView3"
                android:autoText="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/valid"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:id="@+id/recyclerView"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>